User login and token generation

--- a/PursuitPal/PursuitPal.Presentation.Api/appsettings.json
+++ b/PursuitPal/PursuitPal.Presentation.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PURSUIT_PAL_DB;Trusted_Connection=True;"
+  },
+  "Secrets": {
+    "JWT_Secret": "Fb2hL9sR8YpA3wK`12`12123!!$"
   }
 }
