--- a/PursuitPal/PursuitPal.Presentation.Api/PursuitPal.Presentation.Api.csproj
+++ b/PursuitPal/PursuitPal.Presentation.Api/PursuitPal.Presentation.Api.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+    <PropertyGroup Label="Code Analysis">
+	    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
