--- a/PursuitPal/PursuitPal.Presentation.Api/appsettings.json
+++ b/PursuitPal/PursuitPal.Presentation.Api/appsettings.json
@@ -10,6 +10,8 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PURSUIT_PAL_DB;Trusted_Connection=True;"
   },
   "Secrets": {
-    "JWT_Secret": "Fb2hL9sR8YpA3wK`12`12123!!$"
+    "JWT_Secret": "test_secret",
+    "Issuer": "test_issuer",
+    "Audience": "test_audience"
   }
 }
