Enum to string converter, updated db

--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 /PursuitPal/PursuitPal.Presentation.Api/appsettings.json
+/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
