--- a/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
+++ b/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PURSUIT_PAL_DB;Trusted_Connection=True;"
   },
   "Secrets": {
-    "JWT_Secret": "Fb3wK`2h3wK`12`12123LsR8YpA3wK`12`1213wK`29sR8YpA3wK`12`12123!sR8Y3wK`pA3wK`12`1212!$",
+    "JWT_Secret": "Test123",
     "Issuer": "PursuitPalAPI",
     "Audience": "PursuitPalAPI",
     "DemoPassword": "test123"
