Using secrets.json instead of appsettings

--- a/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
+++ b/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PURSUIT_PAL_DB;Trusted_Connection=True;"
+    "DefaultConnection": "connection_string"
   },
   "Secrets": {
-    "JWT_Secret": "Test123",
-    "Issuer": "PursuitPalAPI",
-    "Audience": "PursuitPalAPI",
-    "DemoPassword": "test123"
+    "JWT_Secret": "jwt_secret",
+    "Issuer": "issuer",
+    "Audience": "audience",
+    "DemoPassword": "demo_password"
   }
 }
