--- a/PursuitPal/PursuitPal.Presentation.Api/PursuitPal.Presentation.Api.csproj
+++ b/PursuitPal/PursuitPal.Presentation.Api/PursuitPal.Presentation.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,7 @@
 
     <PropertyGroup Label="Code Analysis">
 	    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<UserSecretsId>482a2277-45f8-4665-aa0f-b1419be9ab42</UserSecretsId>
     </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.15" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
