Initial setup pusruitpal client

--- a/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
+++ b/PursuitPal/PursuitPal.Presentation.Api/appsettings.Development.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "connection_string"
+    "DefaultConnection": "Data Source=Cholaka\\LOCALDB#CBAC77A0;Initial Catalog=PursuitPal_DB;Integrated Security=True"
   },
   "Secrets": {
     "JWT_Secret": "jwt_secret",
     "Issuer": "issuer",
     "Audience": "audience",
-    "DemoPassword": "demo_password"
+    "DemoPassword": "1234"
   }
 }
